Clase Contexto terminada.

--- a/ArticulosRegistro/ArticulosRegistro.csproj
+++ b/ArticulosRegistro/ArticulosRegistro.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Entidades\Articulo.cs" />
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
