Clase ArticuloBLL terminada.

--- a/ArticulosRegistro/ArticulosRegistro.csproj
+++ b/ArticulosRegistro/ArticulosRegistro.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\ArticuloBLL.cs" />
     <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Entidades\Articulo.cs" />
     <Compile Include="Principal.cs">
@@ -94,7 +95,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BLL\" />
     <Folder Include="UI\Consultas\" />
     <Folder Include="UI\Reportes\" />
   </ItemGroup>
