Consultar en proceso.

--- a/ArticulosRegistro/App.config
+++ b/ArticulosRegistro/App.config
@@ -9,7 +9,7 @@
       <add name="ConStr"
        connectionString="Data Source=LAPTOP-YOJAIRI;
        Initial catalog=ArticulosDb;Integrated Security= True"
-       providerName="System.Data.SqlCliet "/>
+       providerName="System.Data.SqlClient "/>
   </connectionStrings>
   
   <entityFramework>
